<resources>
    <string name="app_name">Pomodoro</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="jan">January</string>
    <string name="fer">February</string>
    <string name="mar">March</string>
    <string name="apr">April</string>
    <string name="may">May</string>
    <string name="jun">June</string>
    <string name="jul">July</string>
    <string name="aug">August</string>
    <string name="sep">September</string>
    <string name="oct">October</string>
    <string name="nov">November</string>
    <string name="dec">December</string>
    <string name="delete">Delete</string>
    <string name="stay">Stay</string>
    <string name="leave">Leave</string>
    <string name="done">done!</string>
    <string name="back_to_do">You are typing, do you want to exit?</string>
    <string name="running">The program is still running. Do you want to leave?</string>
    <string name="title_of_the_task">Title of the Task</string>
    <string name="write_down_some_descriptions">Write down some descriptions</string>
    <string name="done_todo">DONE</string>
    <string name="pomo_app">POMO-APP</string>
    <string name="done_avo">Done</string>
    <string name="stats">Stats</string>
    <string name="settings">Settings</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="to_do">To do</string>
    <string name="title">Title</string>
    <string name="description">description</string>
    <string name="_4_uncompleted_tasks">4 uncompleted tasks</string>
    <string name="please_add_a_new_task">Please add a new task</string>
    <string name="no_task_done">No task done</string>
    <string name="_4_completed_tasks">4 completed tasks</string>
    <string name="progress_sumary">Progress sumary</string>
    <string name="daily_pomodoro">DAILY POMODORO</string>
    <string name="_50">50%</string>
    <string name="you_have_complete_10">You have complete 10%</string>
    <string name="_2_10">2/10</string>
    <string name="timer">TIMER</string>
    <string name="pomodoro_duration">Pomodoro Duration</string>
    <string name="short_break_duration">Short Break Duration</string>
    <string name="long_break_duration">Long Break Duration</string>
    <string name="notification">NOTIFICATION</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="complete">Complete</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_navi">TestNaviActivity</string>
    <string name="countinues_app">You stopped the clock inviting you to re-enter the app to continue</string>

    <string name="currently_running_service_type_key">CURRENTLY_RUNNING_SERVICE_TYPE</string>
    <string name="complete_task">You are complete task</string>
    <string name="uncomplete">uncompleted tasks</string>
    <string name="fill_title">Please fill title</string>
    <string name="january">Jan</string>
    <string name="february">Feb</string>
    <string name="march">Mar</string>
    <string name="april">Apr</string>
    <string name="jun_jun">Jun</string>
    <string name="july">Jul</string>
    <string name="august">Aug</string>
    <string name="september">Sep</string>
    <string name="october">Oct</string>
    <string name="november">Nov</string>
    <string name="december">Dec</string>
    <string name="complete_task_done">completed tasks</string>
    <string name="take_a_break">Take a break</string>
    <string name="at_list_for_tasks">(At least 10 tasks)</string>
    <string name="relax_3_to_5_minutes_after_one_task_and_20_to_30_minutes_after_each_4_to_refresh_yourself_recharge_and_regain_your_concentration">Relax 3 to 5 minutes after one task and 20 to 30 minutes after each 4 times to refresh yourself, recharge and regain your concentration</string>
    <string name="finish">FINISH</string>
    <string name="decide_the_task_to_be_done">Decide the task to be done</string>
    <string name="choose_a_list_of_what_to_do_on_day">Choose a list of what to do on day</string>
    <string name="_25_mins_task">(25 mins/task)</string>
    <string name="focus_on_task">Focus on task</string>
    <string name="put_100_your_mind_on_work_until_the_next_break_time_coming_then_mark_the_completed_tasks">Put 100% your mind on work until the next break time coming.Then mark the completed tasks</string>
    <string name="start_the_pomodoro_timer">Start the POMODORO timer</string>
    <string name="try_to_stay_away_all_distractions_during_the_process">Try to stay away all distractions during the process</string>
    <string name="month">Month</string>
    <string name="task">Task</string>
    <string name="monthly_pomodoro">MONTHLY POMODORO</string>
    <string name="you_havwe_complete">You have complete</string>
    <string name="_15m">15 Minutes</string>
    <string name="_20m">20 Minutes</string>
    <string name="_25m">25 Minutes</string>
    <string name="_30m">30 Minutes</string>
    <string name="_35m">35 Minutes</string>
    <string name="_40m">40 Minutes</string>
    <string name="_45m">45 Minutes</string>
    <string name="_2m">2 Minutes</string>
    <string name="_5m">5 Minutes</string>
    <string name="_10m">10 Minutes</string>


</resources>
